Implement private schedule review and publication for #4
